# taifu

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: poll.yml
data/: taifu.sqlite3
data/raw/2607/: 2026-06-20T04_10_00_09_00.xml  2026-06-20T06_45_00_09_00.xml  2026-06-20T09_45_00_09_00.xml  2026-06-20T12_45_00_09_00.xml  2026-06-20T15_45_00_09_00.xml  2026-06-20T18_45_00_09_00.xml  2026-06-20T21_45_00_09_00.xml  2026-06-21T00_45_00_09_00.xml  2026-06-21T03_45_00_09_00.xml  2026-06-21T06_45_00_09_00.xml  2026-06-21T09_45_00_09_00.xml  2026-06-21T12_45_00_09_00.xml  2026-06-21T15_45_00_09_00.xml  2026-06-21T18_45_00_09_00.xml  2026-06-21T21_45_00_09_00.xml  2026-06-22T00_45_00_09_00.xml  2026-06-22T03_50_00_09_00.xml  2026-06-22T06_45_00_09_00.xml  2026-06-22T09_45_00_09_00.xml  2026-06-22T12_45_00_09_00.xml  2026-06-22T15_45_00_09_00.xml  2026-06-22T18_45_00_09_00.xml  2026-06-22T21_45_00_09_00.xml  2026-06-23T00_45_00_09_00.xml  2026-06-23T03_45_00_09_00.xml  2026-06-23T06_45_00_09_00.xml  2026-06-23T09_50_00_09_00.xml  2026-06-23T09_55_00_09_00.xml  2026-06-23T12_45_00_09_00.xml  2026-06-23T15_45_00_09_00.xml  2026-06-23T15_50_00_09_00.xml  2026-06-23T18_45_00_09_00.xml  2026-06-23T21_50_00_09_00.xml  2026-06-23T21_55_00_09_00.xml  2026-06-24T00_45_00_09_00.xml  2026-06-24T03_45_00_09_00.xml  2026-06-24T03_50_00_09_00.xml  (+75 more)
docs/: launchd.md
taifu/: __init__.py  cli.py  parse.py  render.py  sources.py  store.py  trends.py
tests/: test_parse.py  test_render.py  test_sources.py  test_trends.py
tests/fixtures/: typhoon_sample.xml
(+281 files in other folders)
